# RecoAni-API

./: .env.template  .gitignore  LICENSE  README.md  Spacefile  fetch.ipynb  fetch.py  main.py  pyproject.toml  requirements.txt  schemas.py  updateDB.py  updateDB.sh  updtateDatabase.py
data/: retrieve.ipynb  retrieve.py
models/: train.py
router/: route_geturl.py  route_malItems.py  route_recommend.py
