[tool.poetry]
name = "recoani-api"
version = "0.1.0"
description = ""
authors = ["fastsnowy <61731151+fastsnowy@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "recoani_api"}]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.95.1"
fastapi-cache2 = "^0.2.1"
pymongo = "^4.3.3"
python-decouple = "^3.8"
redis = "^4.5.4"
implicit = "^0.6.2"
gql = {extras = ["all"], version = "^3.4.0"}
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
